# llm-youtube-transcript

./: .gitignore  README.md  llm_youtube_transcript.py  pyproject.toml
tests/: test_youtube_transcript.py
